--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "md5": "^2.2.1",
     "mongodb": "^2.2.30",
     "mongoose": "^5.7.5",
+    "nodemon": "^2.0.4",
     "save": "^2.3.0",
     "winston": "^2.3.1"
   },
